--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,15 @@
 {
     "name": "faustbrian/laravel-social-share",
     "description": "",
-    "keywords": [
-        "laravel",
-        "framework",
-        "Laravel-social-share",
-        "Laravel Social Share",
-        "Brian Faust",
-        "faustbrian"
-    ],
+    "keywords": ["laravel", "framework", "Laravel-social-share", "Laravel Social Share", "Brian Faust", "faustbrian"],
     "license": "MIT",
     "authors": [{
         "name": "Brian Faust",
         "email": "hello@brianfaust.de",
-        "homepage": "https://brianfaust.de",
-        "role": "Developer"
+        "homepage": "https://brianfaust.de"
     }],
     "require": {
-        "php": "^5.6.4 || ^7.0",
+        "php": "^7.0",
         "faustbrian/laravel-service-provider": "^1.0"
     },
     "require-dev": {
