--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         "homepage": "https://brianfaust.de"
     }],
     "require": {
-        "php": "^7.1",
+        "php": "^7.0",
         "faustbrian/laravel-service-provider": "^1.0"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.2",
+        "graham-campbell/testbench": "^3.3",
         "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": "^6.1"
     },
     "autoload": {
         "psr-4": {
@@ -28,11 +28,20 @@
         }
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "sort-packages": true
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "laravel": {
+            "providers": [
+                "BrianFaust\\SocialShare\\SocialShareServiceProvider"
+            ],
+            "aliases": {
+                "SocialShare": "BrianFaust\\SocialShare\\Facades\\SocialShare"
+            }
         }
     },
     "minimum-stability": "dev",
