--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,23 @@
 {
     "name": "artisanry/social-share",
     "description": "",
-    "keywords": ["laravel", "framework", "Laravel-social-share", "Laravel Social Share"],
+    "keywords": [
+        "laravel",
+        "framework",
+        "Laravel-social-share",
+        "Laravel Social Share"
+    ],
     "license": "MIT",
-    "authors": [{
-        "name": "Brian Faust",
-        "email": "hello@basecode.sh",
-        "homepage": "https://basecode.sh"
-    }],
+    "authors": [
+        {
+            "name": "Brian Faust",
+            "email": "hello@basecode.sh",
+            "homepage": "https://basecode.sh"
+        }
+    ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "^5.6"
+        "php": "^7.2",
+        "illuminate/support": "^5.8"
     },
     "require-dev": {
         "graham-campbell/testbench": "^5.0",
