--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,14 @@
         "Laravel Social Share"
     ],
     "license": "MPL-2.0",
-    "authors": [
-        {
-            "name": "Brian Faust",
-            "email": "hello@basecode.sh",
-            "homepage": "https://basecode.sh"
-        }
-    ],
+    "authors": [{
+        "name": "Brian Faust",
+        "email": "hello@basecode.sh",
+        "homepage": "https://basecode.sh"
+    }],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "^5.8"
+        "illuminate/support": "^5.8|^6.0"
     },
     "require-dev": {
         "graham-campbell/testbench": "^5.0",
