--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     }],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "^5.8|^6.0"
+        "illuminate/support": "^7.0|^8.0"
     },
     "require-dev": {
         "graham-campbell/testbench": "^5.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
